// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Background1 should match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={100}
      bbWidth={100}
      focusable={false}
      height={100}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 100,
            "width": 100,
          },
        ]
      }
      width={100}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0 0 100 100 100 30 70 0 0z"
          fill={4289527808}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M0 0 100 0 100 100 70 30 0 0z"
          fill={4278199178}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Background2 should match snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    Array [
      Object {
        "flex": 1,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "position": "absolute",
        },
      ]
    }
  >
    <RNSVGSvgView
      bbHeight={1334}
      bbWidth={750}
      focusable={false}
      height={1334}
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          Object {
            "flex": 0,
            "height": 1334,
            "width": 750,
          },
        ]
      }
      width={750}
    >
      <RNSVGGroup>
        <RNSVGPath
          d="M0 0 L0 667 L375 0 L0 0 Z"
          fill={4289527808}
          propList={
            Array [
              "fill",
            ]
          }
        />
        <RNSVGPath
          d="M750 1334 L375 1334 L750 667 L750 1334 Z"
          fill={4278199178}
          propList={
            Array [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</RNCSafeAreaProvider>
`;
